<resources>
    <string name="app_name">My Application</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="emailId">Email Id</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="signup">SIGN UP</string>
    <string name="signip">SIGN IN</string>
    <string name="todo">TODO</string>
    <string name="testing"><![CDATA[Testing>>>]]></string>
    <string name="not_completed">NOT COMPLETED</string>
    <string name="completed">COMPLETED</string>
    <string name="country">Country</string>
    //
    <string-array name="statelist">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

