<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignUpActivity"
    tools:ignore="ExtraText">

    <ImageView android:id="@+id/mainlogoIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/sigupHeadderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/main_color"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainlogoIV"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"/>
# Full Name
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/sigupHeadderTV"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/full_name"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_full_name" />
    </com.google.android.material.textfield.TextInputLayout>
# Mobile Number
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNumberETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/fullNameETLY"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/mobile_number"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_mobile_number24" />
    </com.google.android.material.textfield.TextInputLayout>
#Email Id - emailId
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailIdrETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/mobileNumberETLY"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailIdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/emailId"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_main_id" />
    </com.google.android.material.textfield.TextInputLayout>
# Passowrd - password
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/emailIdrETLY"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/password"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_passowrd" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBT"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bt_background"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>