<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui_activity.SignInActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/mainlogoIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/main_logo"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/sigipHeadderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signip"
        android:textColor="@color/main_color"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainlogoIV"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"/>

    # email Id
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailIdOrUserNameETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/sigipHeadderTV"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailIdOrUserNameETLYET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/emailId"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_main_id" />
    </com.google.android.material.textfield.TextInputLayout>
    # Password
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordETLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/emailIdOrUserNameETLY"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart ="@drawable/et_passowrd" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordETLY"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <AutoCompleteTextView
            android:id="@+id/stateListSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_above="@id/submitBT"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lotte_animation_1" />
    <Button
        android:id="@+id/submitBT"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>